// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form demo -- form 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c7:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c12 {
  display: table-cell;
  vertical-align: middle;
}

.c11 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c11 .c13 {
  color: #6b798e;
}

.c6 {
  display: inline-block;
  cursor: pointer;
}

.c8 {
  margin-left: 5px;
}

.c9 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c10 {
  border: none;
}

<form
  class="uc-fe-form "
>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="3"
    >
      上传文件
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="9"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form demo -- group 1`] = `
.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c3:before,
.c3:after {
  content: ' ';
  display: table;
}

.c3:after {
  clear: both;
}

.c3 .c5 {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 {
  margin-bottom: 16px;
}

.c2:last-child {
  margin-bottom: 0;
}

.c4 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c0 + .c0 {
  margin-top: 24px;
}

.c1 {
  font-weight: bold;
  line-height: 22px;
  padding: 12px 0;
  margin-bottom: 24px;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
  color: #0a1633;
}

.c9 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c9:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c14 {
  display: table-cell;
  vertical-align: middle;
}

.c13 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c13 .c34 {
  color: #6b798e;
}

.c8 {
  display: inline-block;
  cursor: pointer;
}

.c10 {
  margin-left: 5px;
}

.c11 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c12 {
  border: none;
}

.c17 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c19 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c24 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c15:hover {
  border-color: #4683e6;
}

.c15 .c21 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c15 .c23 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c15 .c16 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c15 .c18,
.c15 .c20 {
  line-height: 16px;
}

.c15 .c18 {
  padding-right: 20px;
}

.c15 .c20 {
  padding-left: 20px;
}

.c15 .c18 {
  display: none;
}

.c30 {
  position: relative;
}

.c32 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c28 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c26 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c26 .c31 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c26 .c31::-webkit-input-placeholder {
  color: #abb4c3;
}

.c26 .c31::-moz-placeholder {
  color: #abb4c3;
}

.c26 .c31:-ms-input-placeholder {
  color: #abb4c3;
}

.c26 .c31::placeholder {
  color: #abb4c3;
}

.c26:hover {
  border-color: #4683e6;
}

.c26 .c31 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c26 .c27,
.c26 .c29 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c26 .c27:hover,
.c26 .c29:hover {
  color: #4074e1;
}

.c26 .c27 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c26 .c29 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c25 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c25 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c25 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c25 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c25 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 9;
  height: 34px;
  line-height: 36px;
}

.c25 .uc-fe-slider-handle::before,
.c25 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c25 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c25 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c25 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c25 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c25 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c25 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c25 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c25 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c25 .uc-fe-slider-dot {
  display: none;
}

.c33 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c33 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c33 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
}

.c33 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c33 input::-moz-placeholder {
  color: #abb4c3;
}

.c33 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c33 input::placeholder {
  color: #abb4c3;
}

.c33 input:hover {
  border-color: #4683e6;
}

.c33 input:focus {
  border-color: #4683e6;
}

.c33 .c35 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<form
  class="uc-fe-form "
>
  <div
    class="uc-fe-form-group c0"
  >
    <div
      class="uc-fe-form-group-title c1"
    >
      Group 1
    </div>
    <div>
      <div
        class="uc-fe-form-item c2 uc-fe-row c3"
      >
        <div
          class="uc-fe-form-label c4 c5 uc-fe-col c6"
          span="3"
        >
          upload
        </div>
        <div
          class="uc-fe-form-controller c5 uc-fe-col c7"
          span="9"
        >
          <div>
            <div
              class="c8"
            >
              <input
                hidden=""
                type="file"
              />
              <button
                class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c9"
                type="button"
              >
                请选择文件
              </button>
              <span
                class="c10"
              >
                请选择符合规则的文件
              </span>
            </div>
            <div
              class="c11"
            >
              <div
                class="c12 c13"
              >
                <div
                  class="c14"
                >
                  你还未上传任何内容
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="uc-fe-form-item c2 uc-fe-row c3"
      >
        <div
          class="uc-fe-form-label c4 c5 uc-fe-col c6"
          span="3"
        >
          switch
        </div>
        <div
          class="uc-fe-form-controller c5 uc-fe-col c7"
          span="9"
        >
          <div
            class="c15"
          >
            <div
              class="c16 c17"
            >
              <span
                class="c18 c19"
              >
                ON
              </span>
              <span
                class="c20 c19"
              >
                OFF
              </span>
              <span
                class="c21 c22"
              >
                <span
                  class="c23 c24"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-group c0"
  >
    <div
      class="uc-fe-form-group-title c1"
    >
      Group 2
    </div>
    <div>
      <div
        class="uc-fe-form-item c2 uc-fe-row c3"
      >
        <div
          class="uc-fe-form-label c4 c5 uc-fe-col c6"
          span="3"
        >
          slider
        </div>
        <div
          class="uc-fe-form-controller c5 uc-fe-col c7"
          span="9"
        >
          <div
            class="c25"
          >
            <div
              class="uc-fe-slider"
            >
              <div
                class="uc-fe-slider-rail"
              />
              <div
                class="uc-fe-slider-track"
                style="left:0%;width:10%;"
              />
              <div
                class="uc-fe-slider-step"
              />
              <div
                aria-disabled="false"
                aria-valuemax="300"
                aria-valuemin="0"
                aria-valuenow="10"
                class="uc-fe-slider-handle"
                role="slider"
                style="left:10%;"
                tabindex="0"
              />
              <div
                class="uc-fe-slider-mark"
              />
            </div>
            <div
              class="uc-fe-numberinput uc-fe-numberinput-styletype-default c26"
            >
              <div>
                <span
                  class="c27 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c28"
                  unselectable="unselectable"
                >
                  <i
                    class="uc-fe-icon icon__caret-up "
                    type="caret-up"
                  />
                </span>
                <span
                  class="c29 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c28"
                  unselectable="unselectable"
                >
                  <i
                    class="uc-fe-icon icon__caret-down "
                    type="caret-down"
                  />
                </span>
              </div>
              <div
                class="uc-fe-numberinput-input-wrap c30"
              >
                <input
                  autocomplete="off"
                  class="c31 uc-fe-numberinput-input c32"
                  max="100"
                  min="0"
                  step="1"
                  value="10"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="uc-fe-form-item c2 uc-fe-row c3"
      >
        <div
          class="uc-fe-form-label c4 c5 uc-fe-col c6"
          span="3"
        >
          input
        </div>
        <div
          class="uc-fe-form-controller c5 uc-fe-col c7"
          span="9"
        >
          <span
            class="uc-fe-input c33"
          >
            <input />
          </span>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form demo -- item 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c13 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c7:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c12 {
  display: table-cell;
  vertical-align: middle;
}

.c11 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c11 .c14 {
  color: #6b798e;
}

.c6 {
  display: inline-block;
  cursor: pointer;
}

.c8 {
  margin-left: 5px;
}

.c9 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c10 {
  border: none;
}

<form
  class="uc-fe-form "
>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="3"
    >
      横向布局
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="9"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c13"
    >
      竖向布局
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c13"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
